load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "hugo_theme", "hugo_serve")

hugo_theme(
    name = "docsy",
    srcs = [
        "@com_github_google_docsy//:files",
    ],
)

hugo_site(
    name = "site",
#    config = "config.yaml",
    config = "config_bazel.toml",
    content = glob(["content/**"]),
    static = glob(["static/**"]),
    layouts = glob(["layouts/**"]),
    theme = ":docsy",
)

hugo_serve(
    name = "site_serve",
    dep = [":site"],
)

# sh_test(
#     name = "site_test",
#     srcs = ["site_test.sh"],
#     data = [":site"],
# )
