load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wrapper_lib",
    srcs = ["wrapper.go"],
    importpath = "eval/actions/wrapper",
    visibility = ["//visibility:private"],
    deps = ["@com_github_rs_zerolog//log"],
)

go_binary(
    name = "wrapper",
    embed = [":wrapper_lib"],
    visibility = ["//visibility:public"],
)
