load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_layer",
    "container_push",
)
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

go_library(
    name = "engine_lib",
    srcs = ["main.go"],
    importpath = "eval/cmd/engine",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/actions",
        "//pkg/db",
        "//pkg/grpc/client",
        "//pkg/grpc/server",
        "//pkg/types",
        "//proto/action",
        "//proto/async_service",
        "//proto/builder",
        "//proto/cache",
        "//proto/engine",
        "@com_github_gofrs_uuid//:uuid",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_viper//:viper",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_binary(
    name = "engine",
    embed = [":engine_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "container",
    base = "@distroless_base_debian10//image",
    cmd = [
        "/dist/engine",
    ],
    directory = "/dist",
    files = [
        ":engine",
    ],
    visibility = ["//:__pkg__"],
    workdir = "/dist",
)

# container_push(
#     name = "push",
#     image = ":container",
#     visibility = ["//:__pkg__"],
#     format = "Docker",
#     registry = "localhost:5001",
#     repository = "main",
#     tag = "dev",
#     )

k8s_object(
    name = "dev",
    # cluster as in `kubectl config view --minify -o=jsonpath='{.contexts[0].context.cluster}'`
    cluster = "kind-eval",
    context = "kind-eval",
    images = {
        "localhost:5000/main:dev": ":container",
    },
    kind = "deployment",
    # A template of a Kubernetes Deployment object yaml.
    template = ":deployment.yaml",
    # really should be only //:eval but we a package_group to avoid dependency cycles
    visibility = ["//visibility:public"],
)
