load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "eval/cmd/evalctl",
    visibility = ["//visibility:private"],
    deps = ["//cmd/evalctl/cmd:go_default_library"],
)

go_binary(
    name = "evalctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
