load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "evalctl_lib",
    srcs = ["main.go"],
    importpath = "eval/cmd/evalctl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/evalctl/cmd",
        "@com_github_kyokomi_emoji_v2//:emoji",
    ],
)

go_binary(
    name = "evalctl",
    embed = [":evalctl_lib"],
    visibility = ["//visibility:public"],
)
