load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agraph",
    srcs = ["agraph.go"],
    importpath = "eval/pkg/agraph",
    visibility = ["//visibility:public"],
)

go_test(
    name = "agraph_test",
    srcs = ["agraph_test.go"],
    embed = [":agraph"],
    deps = [
        "@org_gonum_v1_gonum//graph",
        "@org_gonum_v1_gonum//graph/testgraph",
    ],
)
