load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = ["cache.go"],
    importpath = "eval/pkg/cache",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//constraints"],
)

go_test(
    name = "cache_test",
    srcs = ["cache_test.go"],
    deps = [":cache"],
)
