load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graph",
    srcs = ["graph.go"],
    importpath = "eval/pkg/graph",
    visibility = ["//visibility:public"],
    deps = ["@org_gonum_v1_gonum//graph/simple"],
)

go_test(
    name = "graph_test",
    srcs = ["graph_test.go"],
    deps = [
        ":graph",
        "//pkg/graph",  # keep
        "@org_gonum_v1_gonum//graph",
        "@org_gonum_v1_gonum//graph/simple",
        "@org_gonum_v1_gonum//graph/testgraph",
    ],
)
