load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gomock//:gomock.bzl", "gomock")

go_library(
    name = "hash",
    srcs = ["hash.go"],
    importpath = "eval/pkg/hash",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hash_test",
    srcs = [
        "hash_test.go",
        "mock_hash_test.go",
    ],
    embed = [":hash"],
    deps = [
        "@com_github_golang_mock//gomock",
    ],
)

gomock(
    name = "hash_mock",
    out = "mock_hash_test.go",
    interfaces = ["Hasher"],
    library = ":hash",
    package = "hash_test",
)
