load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "k8s",
    srcs = ["k8s.go"],
    importpath = "eval/pkg/k8s",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/fake",
        "@io_k8s_client_go//rest",
    ],
)
