load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pointer",
    srcs = ["pointer.go"],
    importpath = "eval/pkg/pointer",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pointer_test",
    srcs = ["pointer_test.go"],
    deps = [":pointer"],
)
