load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//build:stringer.bzl", "stringer")

go_library(
    name = "runner",
    srcs = [
        #            ":gen-taskstatus-stringer"
        "runner.go",
    ],
    importpath = "eval/pkg/runner",
    visibility = ["//visibility:public"],
)

go_test(
    name = "runner_test",
    srcs = ["runner_test.go"],
    embed = [":runner"],
)

stringer(
    name = "taskstatus-string",
    src = "runner.go",
    type = "taskStatus",
)
