load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "action_proto",
    srcs = ["action.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/channel:channel_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

go_proto_library(
    name = "action_go_proto",
    importpath = "eval/proto/action",
    proto = ":action_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/channel"],
)

go_library(
    name = "action",
    embed = [":action_go_proto"],
    importpath = "eval/proto/action",
    visibility = ["//visibility:public"],
)
