load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "agraph_proto",
    srcs = ["agraph.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/action/v1:action_proto"],
)

go_proto_library(
    name = "agraph_go_proto",
    importpath = "eval/proto/agraph",
    proto = ":agraph_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/action/v1:action"],
)

go_library(
    name = "agraph",
    embed = [":agraph_go_proto"],
    importpath = "eval/proto/agraph",
    visibility = ["//visibility:public"],
)
