load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "builder_proto",
    srcs = ["builder.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/async_service:async_service_proto"],
)

go_proto_library(
    name = "builder_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "eval/proto/builder",
    proto = ":builder_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/async_service"],
)

go_library(
    name = "builder",
    embed = [":builder_go_proto"],
    importpath = "eval/proto/builder",
    visibility = ["//visibility:public"],
)
