load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cache_proto",
    srcs = ["cache.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/context:context_proto"],
)

go_proto_library(
    name = "cache_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "eval/proto/cache",
    proto = ":cache_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/context"],
)

go_library(
    name = "cache",
    embed = [":cache_go_proto"],
    importpath = "eval/proto/cache",
    visibility = ["//visibility:public"],
)
