load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "context_proto",
    srcs = ["context.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/agraph:agraph_proto"],
)

go_proto_library(
    name = "context_go_proto",
    importpath = "eval/proto/context",
    proto = ":context_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/agraph"],
)

go_library(
    name = "context",
    embed = [":context_go_proto"],
    importpath = "eval/proto/context",
    visibility = ["//visibility:public"],
)
