load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "grunt_proto",
    srcs = ["grunt.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "grunt_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "eval/proto/grunt",
    proto = ":grunt_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "grunt",
    embed = [":grunt_go_proto"],
    importpath = "eval/proto/grunt",
    visibility = ["//visibility:public"],
)
