load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "runner_proto",
    srcs = ["runner.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/agraph:agraph_proto",
        "//proto/async_service:async_service_proto",
    ],
)

go_proto_library(
    name = "runner_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "eval/proto/runner",
    proto = ":runner_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/agraph",
        "//proto/async_service",
    ],
)

go_library(
    name = "runner",
    embed = [":runner_go_proto"],
    importpath = "eval/proto/runner",
    visibility = ["//visibility:public"],
)
